[package]
name = "lassecoin_keygen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = "2.0.0"
rand = "0.8.5"
random_word = { version = "0.4.3", features = ["en"] }
rsa = "0.9.6"
sha2 = "0.10.8"
