[package]
name = "rsa_keygen"
version = "1.0.3"
edition = "2021"
description = "A library for generating rsa keys with a 12 word seedphrase"
license = "MIT"
keywords = ["rsa", "keygen", "seedphrase", "rsa keygen"]
homepage = "https://github.com/supersanta183/lassecoin_keygen"
repository = "https://github.com/supersanta183/lassecoin_keygen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.7"
mnemonic = "1.1.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rsa = "0.9.6"
sha2 = "0.10.8"
tiny-bip39 = "1.0.0"
